# BigData_Project

./: .gitignore  README.md  Report.docx  batch-processing.sh  docker-compose.yml  mta-backup.yaml  pyproject.toml  requirements.txt  spark-backup.yaml
.github/workflows/: integration_test.yml
cassandra/: init.cql
generator/: generator.py
grafana/dashboards/: mta_live.json  provider.yaml
grafana/datasources/: cassandra.yaml
grafana/provisioning/dashboards/: taxi-dashboard-prototype.json  untested-taxi-dashboard.json  untested2-taxi-dashboard.json
grafana/provisioning/datasources/: cassandra.yaml
kafka/: Dockerfile  consumer.py  desktop.ini  gateway.py  producer.py  producer_old.py
kubernetes/: 00-core.yaml  01-data-layer.yaml  02-init-job.yaml  03-apps.yaml  04-ui.yaml  05-hdfs.yaml  06-batch-cronjob.yaml
schemas/: taxi_trip.avsc
scripts/: deploy.sh  reset.sh  start.sh  stop.sh
spark/: Dockerfile  batch_job.py  scheduler.py  streaming.py  streaming_old.py
tests/: integration_test.py
